# my-brain

./: .env.example  .gitignore  UX_ENHANCEMENT_PLAN.md  docker-compose.yml
api/: Dockerfile  pyproject.toml  requirements.txt  supervisord.conf
api/app/: config.py  constants.py  deps.py  errors.py  main.py
api/app/agents/: base.py  classifier.py  extractor.py  knowledge_integrator.py  schema_architect.py  summarizer.py  verifier.py
api/app/db/: session.py
api/app/integrations/: anthropic_client.py  langfuse_client.py  openai_embeddings.py  supabase_client.py
api/app/parsing/: csv.py  docx.py  image.py  pdf.py  pptx.py  router.py  txt.py  xlsx.py
api/app/repositories/: chat_repo.py  documents_repo.py  duplicate_candidates_repo.py  entities_repo.py  events_repo.py  extracted_fields_repo.py  facts_repo.py
api/app/routes/: __init__.py  chat.py  documents.py  health.py  note_reintegrate.py  search.py  threads.py
api/app/scripts/: backfill_metaphone.py
api/app/utils/: retry.py
api/app/worker/: tasks.py  worker.py
api/migrations/: env.py
api/migrations/versions/: 20260520_0001_initial_schema.py  20260520_0002_rls_policies.py  20260526_0003_groundedness_retry_budget.py  20260530_0004_chat_threads_messages.py  20260602_0005_notes_dedupe_schema.py
api/scripts/: backfill_thumbnails.py
api/tests/: conftest.py
api/tests/integration/: test_chat_quality.py  test_pipeline_resumability.py  test_pipeline_smoke.py
api/tests/unit/: test_agents_concurrency.py  test_bulk_insert.py  test_fusion.py  test_fuzzy_match.py  test_groundedness.py  test_jwt_auth.py  (+9 more)
(+116 files in other folders)
